--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="phaser.min.js"></script>
     <script type="text/javascript"src="game.js" ></script>
     <script type="text/javascript"src="phaser.js" ></script>
+    <script type="text/javascript" src="easystar-0.4.3.js"></script>
     <title>Document</title>
     
 </head>
